--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -47,7 +47,7 @@
         android:layout_marginStart="29dp"
         android:layout_marginTop="12dp"
         android:ems="10"
-        android:hint="Enter Last Name"
+        android:hint="Enter User Name"
         android:inputType="textPersonName"
         app:layout_constraintStart_toEndOf="@+id/lNameText"
         app:layout_constraintTop_toBottomOf="@+id/fNameEdit" />
