--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/fNameEdit"
+        android:id="@+id/firstNameET"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="27dp"
@@ -41,16 +41,18 @@
         app:layout_constraintTop_toBottomOf="@+id/fNameText" />
 
     <EditText
-        android:id="@+id/lNameEdit"
+        android:id="@+id/lastNameET"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="29dp"
         android:layout_marginTop="12dp"
+        android:layout_marginEnd="60dp"
         android:ems="10"
-        android:hint="Enter User Name"
+        android:hint="Enter Last Name"
         android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/lNameText"
-        app:layout_constraintTop_toBottomOf="@+id/fNameEdit" />
+        app:layout_constraintTop_toBottomOf="@+id/firstNameET" />
 
     <TextView
         android:id="@+id/contactText"
@@ -64,7 +66,7 @@
         app:layout_constraintTop_toBottomOf="@+id/lNameText" />
 
     <EditText
-        android:id="@+id/contactEdit"
+        android:id="@+id/contactET"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="19dp"
@@ -73,7 +75,7 @@
         android:hint="Phone number"
         android:inputType="textPersonName"
         app:layout_constraintStart_toEndOf="@+id/contactText"
-        app:layout_constraintTop_toBottomOf="@+id/lNameEdit" />
+        app:layout_constraintTop_toBottomOf="@+id/lastNameET" />
 
     <TextView
         android:id="@+id/emailText"
@@ -87,7 +89,7 @@
         app:layout_constraintTop_toBottomOf="@+id/contactText" />
 
     <EditText
-        android:id="@+id/emailEdit"
+        android:id="@+id/emailET"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="62dp"
@@ -96,7 +98,7 @@
         android:hint="Email Address"
         android:inputType="textPersonName"
         app:layout_constraintStart_toEndOf="@+id/emailText"
-        app:layout_constraintTop_toBottomOf="@+id/contactEdit" />
+        app:layout_constraintTop_toBottomOf="@+id/contactET" />
 
     <TextView
         android:id="@+id/passwordText"
@@ -110,7 +112,7 @@
         app:layout_constraintTop_toBottomOf="@+id/emailText" />
 
     <EditText
-        android:id="@+id/passwordEdit"
+        android:id="@+id/passwordET"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="35dp"
@@ -119,7 +121,7 @@
         android:hint="Enter Password"
         android:inputType="textPersonName"
         app:layout_constraintStart_toEndOf="@+id/passwordText"
-        app:layout_constraintTop_toBottomOf="@+id/emailEdit" />
+        app:layout_constraintTop_toBottomOf="@+id/emailET" />
 
     <Button
         android:id="@+id/signupSubmit"
@@ -134,7 +136,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordEdit" />
+        app:layout_constraintTop_toBottomOf="@+id/passwordET" />
 
     <TextView
         android:id="@+id/SignupText"
