--- a/app/src/main/res/layout/activity_post__a__ride.xml
+++ b/app/src/main/res/layout/activity_post__a__ride.xml
@@ -113,23 +113,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginBottom="301dp"
+        android:layout_marginTop="51dp"
+        android:layout_marginEnd="112dp"
         android:text="Cost"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/costEdit"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/timingsText" />
 
     <EditText
         android:id="@+id/costEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="41dp"
-        android:layout_marginTop="53dp"
-        android:layout_marginBottom="290dp"
+        android:layout_marginStart="112dp"
         android:ems="10"
         android:hint="Name your price"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/LocationET"
         app:layout_constraintStart_toEndOf="@+id/costText"
         app:layout_constraintTop_toBottomOf="@+id/timingsEdit" />
 
@@ -159,5 +159,29 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/locationTV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="55dp"
+        android:text="Location"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/costText" />
+
+    <EditText
+        android:id="@+id/LocationET"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="84dp"
+        android:ems="10"
+        android:hint="Location"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/postBTN"
+        app:layout_constraintStart_toEndOf="@+id/locationTV"
+        app:layout_constraintTop_toBottomOf="@+id/costEdit"
+        app:layout_constraintVertical_bias="0.49" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
